--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=smallbasket-backend
+spring.datasource.url=jdbc:h2:mem:smallbasket
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.show-sql=true
